update openapi3.yml, add search api for api-keys, remove get all keys api, replace database_url env variable with Secret lookup
